# WealthMachineIntelligence

./: .dockerignore  .env.example  .gitignore  .replit  CHANGELOG.md  DEPLOYMENT_SUMMARY.md  Dockerfile  ENTERPRISE_UPGRADE_PLAN.md  Instructions.md  README.md  RELEASE_CHECKLIST.md  SECURITY.md  WEALTHMACHINE_ANALYSIS.md  conftest.py  jwt.py  main.py  pyproject.toml  replit.md  replit.nix  requirements-runtime.txt  requirements.txt  setup_database.py  sitecustomize.py
WealthMachineIntelligenceEnhanced/: .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
WealthMachineIntelligenceEnhanced/.github/workflows/: ci.yml
WealthMachineIntelligenceEnhanced/src/: cache.py  config.py  vector_db.py
WealthMachineIntelligenceEnhanced/src/api/: main.py
WealthMachineIntelligenceEnhanced/src/api/routes/: ventures.py
WealthMachineIntelligenceEnhanced/src/auth/: keycloak.py
WealthMachineIntelligenceEnhanced/src/database/: connection.py
WealthMachineIntelligenceEnhanced/tests/: test_health.py
ai-integration/: AI-tools.md  agent-architecture.md  agent-flow.md  agent-lifecycle.md  multi-agent-workflow.md  performance_metrics.py
ai_integration/: __init__.py  knowledge_graph.py  logging_config.py
attached_assets/: Pasted--Great-work-Replit-Agent-Before-introducing-additional-features-let-s-review-the-key-integ-1738208914495.txt  Pasted--Yes-Replit-Agent-let-s-continue-by-expanding-the-ontology-and-role-definitions-to-add-more-1738048091261.txt  Pasted-Everything-looks-great-Before-adding-new-features-let-s-do-a-quick-end-to-end-validation-to-co-1738211741052.txt  Pasted-Fantastic-work-Replit-Agent-The-system-is-now-thoroughly-documented-and-structurally-consistent-N-1738206488379.txt  Pasted-Hello-Replit-Agent-Please-initialize-a-new-project-called-WealthMachineOntology-DigitalAI-follow-1738047482718.txt  Pasted-Here-are-concise-code-like-excerpts-illustrating-each-of-the-three-requested-areas-They-re-simp-1738210242136.txt  Pasted-Thank-you-for-the-clarifications-These-insights-help-connect-the-dots-between-the-abstract-model-re-1738208182488.txt  Pasted-Yes-Replit-Agent-let-s-proceed-with-building-the-initial-prototype-of-the-WealthMachineOntolo-1738047693971.txt  Pasted-Yes-Replit-Agent-let-s-proceed-with-this-Market-Intelligence-Agent-implementation-plan-Below--1738206682352.txt  Pasted-Yes-let-s-proceed-with-these-AI-architecture-enhancements-to-address-the-gaps-and-streamline-ou-1738208266278.txt  Screenshot 2025-07-27 at 2.45.18 AM_1753598723814.heic  Screenshot 2025-07-27 at 3.07.04 AM_1753600028410.heic  content-1753596843465.md
automation/: rules-engine.md  sample-rules.json
docs/: AUTONOMY_ARCHITECTURE_DECISION.md  CHATGPT_SITE.md  COMMERCIAL_PLATFORM_BACKCAST.md  CONSTITUTIONAL_CONTROL_LAYER.md  CONTROL_API.md  CONTROL_PLANE_PREVIEW.md  DEPLOYMENT.md  FOUNDRY_UNDERWRITING_ADAPTER.md  IMPLEMENTATION_ROADMAP.md  PROGRESSIVE_AUTONOMY_LEVELS.md  REPOSITORY_TRUTH_AUDIT.md  SIDE_EFFECT_INVENTORY.md  UAT_ENTERPRISE_SYSTEM_SPECIFICATION.md  VENTURE_CELL_CHARTER_TEMPLATE.md
knowledge-graph/: queries.md  query-examples.yaml
loops/: IncomeStreamsLoop.md  TeamLoop.md
ontology/: ontology-guide.md  ontology-schema.yaml
phases/: Phase1.md  Phase2.md  Phase3.md
roles/: BizModel_TechInnovator.md  Brand_MarketingStrategist.md  EmergingTechSpecialist.md  (+5 more)
src/: cache.py  (+4 more)
(+139 files in other folders)
