[project]
name = "uat-governed-preview"
version = "0.2.0rc1"
description = "Governed, evidence-labeled UAT venture simulation preview with no autonomous external authority"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.1,<1",
    "prometheus-client>=0.22.1,<1",
    "PyJWT>=2.10.1,<3",
    "pydantic>=2.11.7,<3",
    "python-dotenv>=1.1.1,<2",
    "python-multipart>=0.0.20,<1",
    "sqlalchemy>=2.0.41,<3",
    "structlog>=25.4.0,<26",
    "uvicorn>=0.35.0,<1",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
    "httpx>=0.27,<1",
    "pip-audit>=2.10,<3",
    "pytest>=9.0.3,<10",
    "pytest-asyncio>=1.3,<2",
    "ruff>=0.12,<1",
]
legacy-simulation = [
    "numpy>=2.2.2,<3",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
namespaces = true
